# snail-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  version-bump.yml
src/: cli.rs  config.rs  main.rs  utils.rs
src/commands/: fix.rs  gtd.rs  memo.rs  mod.rs  project.rs  todo.rs
templates/: base.md  daily_report.md  memo.md  project.md  todo.md
