[package]
name = "snail"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "snail"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
dirs = "5.0"
anyhow = "1.0"
shellexpand = "3.1"
gray_matter = "0.2"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.8"
